fixed contacts overflow

--- a/src/assets/cmps/ContactIndex.scss
+++ b/src/assets/cmps/ContactIndex.scss
@@ -37,7 +37,7 @@
     ul {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(225px, 1fr));
-      gap: 40px;
+      gap: 20px;
       padding: 6px;
     }
 
@@ -53,6 +53,7 @@
       display: flex;
       align-items: center;
       margin-bottom: 10px;
+      overflow-x: scroll;
     }
 
     .name p,
